# cryptoshow

./: .env.template  .gitignore  LICENSE  README.md  docker-bake.hcl  docker-compose.yml
.github/workflows/: docker-deploy.yml  frontend.yml  lint.yml  production-deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  clustering_test.py  commons.py  entrypoint.sh  entrypoint_fast.sh  main.py  models.py  pyproject.toml  requirements.txt  tasks.py  utils.py
backend/cb/: compute_score.py
backend/cb_small/: compute_score.py
backend/clustering/: __init__.py  clustering_test.py  compute.py  compute_distance_matrix.py  smoothen_prediction.py
backend/esm2_generator/: compute_esm.py
backend/prediction/: compute_score.py
backend/trajectory_generator/: .gitignore  __init__.py  compute_trajectory.py
frontend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  bun.lockb  eslint.config.js  index.html  nginx.conf  package.json  vite.config.ts
frontend/nginx/: certbot_entrypoint.sh  nginx.conf  nginx_entrypoint.sh  nginx_monitoring.conf  nginx_ssl_block.conf  nginx_ssl_redirect.conf  renew_certs.sh
frontend/public/: maintenance.html  monitoring_unavailable.html
frontend/src/: App.css  App.tsx  index.css  main.tsx  theme.css  types.ts  utils.ts
frontend/src/components/: AHoJResults.css  Header.css  (+16 more)
ml-inference/: Dockerfile  main.py  requirements.txt
ml-inference/esm2_generator/: __init__.py  compute_esm.py
ml_inference/: Dockerfile  main.py  requirements.txt
ml_inference/cb/: __init__.py  compute_score.py
ml_inference/esm2_generator/: compute_esm.py
monitoring/: prometheus.yml
(+25 files in other folders)
