[project]
name = "backend"
version = "0.1.0"
description = "Backend for CryptoShow"
requires-python = ">=3.12"
authors = [{ name = "Lukas Polak", email = "admin@lukaspolak.cz" }]

dependencies = [
    # FastAPI
    "fastapi[standard]",
    "requests",
    "prometheus-fastapi-instrumentator",
    "flower",

    # CryptoBench (Tiny), ESM-2
    "biopython==1.85",
    "fair-esm==2.0.0",
    "filelock==3.13.1",
    "fsspec==2023.10.0",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "torch==2.6.0",
    "typing_extensions>=4.10.0",

    # Clustering
    "scikit-learn",

    # Sequence + Structure functionality
    "biotite",

    # Trajectory generation
    "numpy",
    "MDAnalysis",
    "gemmi",
    "scipy",

    # Async tasks
    "celery",
    "redis"
]

